external-crates/move/crates/move-package-alt/tests/data/invalid_environment1/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/invalid_environment1/Move.toml"`
  ┌─ "tests/data/invalid_environment1/Move.toml":8:11
  │
8 │ mainnet = true
  │           ^^^^
  │
  = invalid type: boolean `true`, expected a string
